# isosurf-rendering

./: CMakeLists.txt  README.md  hello  main.cpp  tmp.txt
include/: application.h  camera.h  common.h  input_mgr.h  renderer.h  scene.h  shader.h  square_grid.h  thread_pool.h  timer.h  triangle_scene.h  vertex.h
include/algorithms/: cube_grid.h  diamond.h  diamond_queue.h  hexa_grid.h  marching_cubes.h  marching_squares.h  mc_tables.h  square_grid.h  tetra.h  tetra_hierarchy.h
include/applications/: application.h  cube_app.h  ms_app.h  sandbox.h  tetra_app.h
include/rendering/: camera.h  gl_errors.h  index_buffer.h  mesh.h  plane.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
include/scenes/: grid_scene.h  triangle_scene.h
include/utils/: running_average.h
shaders/: Basic.shader  Default.shader  Wireframe.shader  fragment.glsl  vertex.glsl
src/: application.cpp  camera.cpp  input_mgr.cpp  main.cpp  renderer.cpp  scene.cpp  shader.cpp  square_grid.cpp  thread_pool.cpp  timer.cpp  triangle_scene.cpp
src/algorithms/: cube_grid.cpp  diamond.cpp  diamond_queue.cpp  marching_cubes.cpp  marching_squares.cpp  square_grid.cpp  tetra_hierarchy.cpp
src/applications/: application.cpp  cube_app.cpp  ms_app.cpp  sandbox.cpp  tetra_app.cpp
src/rendering/: camera.cpp  gl_errors.cpp  index_buffer.cpp  mesh.cpp  renderer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/scenes/: grid_scene.cpp  triangle_scene.cpp
